# natural-deduction

./: .gitignore  LICENSE.txt  Makefile  README.md  flake.nix
docs/: Cli.html  FML_lexer.html  FML_main.html  FML_parser.html  FML_types.html  IO.html  ITM_lexer.html  ITM_main.html  ITM_parser.html  ITM_types.html  Main.html  PRF_lexer.html  PRF_main.html  PRF_parser.html  PRF_sequencer.html  PRF_types.html  UTF8_segmenter.html  code_Cli.html  code_FML_main.html  code_FML_types.html  code_IO.html  code_ITM_main.html  code_ITM_types.html  code_Main.html  code_PRF_main.html  code_PRF_sequencer.html  code_PRF_types.html  code_UTF8_segmenter.html  code_VALCli.execute_arg_list.html  code_VALCli.options_of_string_list.html  code_VALFML_main.closed_terms_of_fml.html  code_VALFML_main.fml_is_fml_with_var_replaced_by_term.html  code_VALFML_main.fml_list_of_file.html  code_VALFML_main.fml_of_string.html  code_VALFML_main.free_vars_of_fml.html  code_VALFML_main.is_closed_term.html  code_VALFML_main.string_of_binop.html  code_VALFML_main.string_of_fml.html  code_VALFML_main.string_of_pred.html  code_VALFML_main.string_of_quant.html  (+80 more)
examples/: DEF0.txt  DEF1.txt  DEF2.txt  DEF3.txt  FOL1.txt  ND11.txt  ND13.txt  ND14.txt  ND15.txt  ND16.txt  ND17.txt  ND2.txt  ND20.txt  ND21.txt  ND51.txt  ND91.txt  defs.txt  defs1.txt  discharge.txt  exp_defs1_prf1.txt  ind.txt  peano.txt  pred.txt  prf.txt  prf1.txt  proof3.txt  proof4.txt  prop.txt  undischarge.txt
opam/: META  natural-deduction.opam
specifications/: ND_rules.txt  ND_sequencer_input_grammar.txt  PRF_sequencer_input_grammar.txt  (+4 more)
(+144 files in other folders)
